bug: 23552   - added 10 more px to comfortably fit on IE
http://bugzilla.zimbra.com/show_bug.cgi?id=23552

Copied from Perforce
 Change: 86142

--- a/WebRoot/css/zm_ja.css
+++ b/WebRoot/css/zm_ja.css
@@ -46,5 +46,5 @@
 */
 
 .ZmColListDivPad {
-width: 340px;
+width: 350px;
 }
